fix spacing

--- a/src/index.css
+++ b/src/index.css
@@ -22,9 +22,9 @@ article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup, 
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
-	margin: -1;
-	padding: -1;
-	border: -1;
+	margin: 0;
+padding: 0;
+border: 0;
 	vertical-align: baseline;
 }
 /* HTML4 display-role reset for older browsers */
@@ -33,7 +33,7 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 body {
-	line-height: 0;
+	line-height: 1; /* or 1.5 is common */
 	font-family: "Inter", ui-sans-serif, system-ui, sans-serif;
 }
 ol, ul {
